add new website files

--- a/index.html
+++ b/index.html
@@ -1,5 +1,19 @@
+<!DOCTYPE html>
 <html>
-	<body>
-		Hello, DBC!
-	</body>
+  <head>
+    <title>Lucy Boone's Professional Website</title>
+    <meta charset="UTF-8">
+   <link type="text/css" rel="stylesheet" href="stylesheets/default.css"/>
+   <link href='http://fonts.googleapis.com/css?family=Droid+Serif|Bitter|Arvo' rel='stylesheet' type='text/css'>
+   </head>
+<body>
+  <img src="https://raw.githubusercontent.com/LucyBoone/LucyBoone.github.io/master/Nine-206.jpg"/>
+  <h1> The Professional Website of Lucy Boone,<br> Dev Bootcamp Student </h1>
+     <div id="first"><a href="http://lucyboone.github.io/about.html">About Me</a></div>
+     <div id="second"><a href="http://lucyboone.github.io/blog/index.html">My Blog</a></div>
+     <div id="third"><a href="http://lucyboone.github.io/work.html">My Work</a></div>
+     <div id="fourth"><a href="http://lucyboone.github.io/contact.html">Contact Me</a></div>
+  <p> Welcome to my website! Here you'll (eventually) find information about my background, both personal and professional, my portfolio of work as it is compiled, a link to my blog as an additional resource, and of course, contact information. I hope you enjoy! Ciao!
+  </p>
+</body>
 </html>
