index page updates: link styling changed to match blog, also updated content

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
       </div>
     </div>
     <div id="content">
-      <p> Welcome to my website! Here you'll find information about my background, both personal and professional, my portfolio of work as it is compiled, a link to my blog as an additional resource, and of course, contact information. I hope you enjoy! Ciao!
-      </p>
+      <p> Welcome to my website! Here you'll find information about my background, both personal and professional, my portfolio of work, a link to my blog, and contact information. Please reach out via LinkedIn or Twitter if you'd like to chat about design, development, or anything TV related!
     </div>
     <div id="sidebar">
       <p>
