--- a/index.html
+++ b/index.html
@@ -4,23 +4,25 @@
     <title>Lucy Boone's Professional Website</title>
     <meta charset="UTF-8">
     <link type="text/css" rel="stylesheet" href="stylesheets/default.css"/>
+    <link type="text/css" rel="stylesheet" href="stylesheets/index.css"/>
+
     <link href='http://fonts.googleapis.com/css?family=Droid+Serif|Bitter|Arvo' rel='stylesheet' type='text/css'>
    </head>
 <body>
   <div class="container">
-    <div id="nav">
+    <div class="nav">
        <button class="button"><a href="http://lucyboone.github.io/about.html">About Me</a></button>
        <button class="button"><a href="http://lucyboone.github.io/blog/index.html">My Blog</a></button>
        <button class="button"><a href="http://lucyboone.github.io/work.html">My Work</a></button>
        <br><br>
-      <div id="header">
+      <div class="header">
         <header><h1> The Professional Website of Lucy Boone, Web Developer</h1></header>
       </div>
     </div>
-    <div id="content">
-      <p> Welcome to my website! Here you'll find information about my background, both personal and professional, my portfolio of work, a link to my blog, and contact information. Please reach out via LinkedIn or Twitter if you'd like to chat about design, development, or anything TV related!
+    <div class="content">
+      <p> Welcome to my website! Here you'll find information about my background, both personal and professional, my portfolio of work, a link to my blog, and contact information. Please reach out via LinkedIn or Twitter if you'd like to chat about design, development, or anything TV related. </p>
     </div>
-    <div id="sidebar">
+    <div class="sidebar">
       <p>
         Contact Me:
         <ul>
