add portfolio page

--- a/about.html
+++ b/about.html
@@ -24,7 +24,8 @@
           A manager once called me "the consummate team player," a description I strive to embody every day. As a former strategic account manager for a tech company, I'm used to learning on my feet, a quick pace to my day, and an ever-changing environment. I'm happiest when I have a new challenge, puzzle, or objective on a regular basis. I want to solve problems, and build, create, and see the product of my work. I have a deep appreciation for the current golden-age of television, the combination of fashion & utility represented by the blazer, and the classic combination of pie and coffee.
         </p>
           <p>
-            <iframe src="https://resume.creddle.io/embed/jirn7x9gq94" width="850" height="1100" seamless></iframe>
+            <iframe src="https://resume.creddle.io/embed/jirn7x9gq94"
+              width="850" height="1100" seamless></iframe> 
           </p>
       </div>
       <div class="sidebar">
